crates/tui/src/snapshots/tui__view__tests__failed_turn.snap
---
source: crates/tui/src/view_tests.rs
expression: screen(&app)
---



                                                       ▄▄▄▄▄
                                                        hi ▐
                                                       ▀▀▀▀▀
                                                       00:00
✗ boom · io_failed
▣ failed
▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄
>
▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀
