crates/tui/src/snapshots/tui__view__tests__key_map_40x12.snap
---
source: crates/tui/src/view_tests.rs
expression: "sized(&mut app, 40, 12)"
---
Sessions                               ✕
  Send a prompt, or a steering message
during a turn · Enter
  Insert a line break · Shift+Enter ·
Ctrl+J
  Close what is on top; interrupt the
turn when nothing is open · Esc · click
the overlay's ✕ or outside it; click
"esc to interrupt"
▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄
>
▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀
