crates/tui/src/snapshots/tui__view__tests__long_line_wrapped.snap
---
source: crates/tui/src/view_tests.rs
expression: screen(&app)
---







›
wwwwwwwwwwwwwwwwwwwwwwwwwwwwwwwwwwwwwwwwwwwwwwwwwwwwwwwwwwww
wwwwwwwwwwwwwwwwwwwwwwwwwwwwwwwwwwwwwwwwwwwwwwwwwwwwwwwwwwww
wwwwwwwwwwwwwwwwwwwwwwwwwwwwww
>
