crates/tui/src/snapshots/tui__view__tests__markdown_reply.snap
---
source: crates/tui/src/view_tests.rs
expression: text(&buf)
---
Plan                                   │
                                       │
• read the file                        │
• write it                             │
                                       █
rust                               copy█
1 │ fn main() {                        █
2 │     let x = 1;                     █
3 │ }                                  █
                                       █
step   ms                              █
─────────                              █
parse  12                              █
draw    3                              █
▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀█
▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄
▌ >
▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀
