crates/tui/src/snapshots/tui__view__tests__markdown_reply_streaming.snap
---
source: crates/tui/src/view_tests.rs
expression: "text(&buffer(&app, 40, 18))"
---

                             ▄▄▄▄▄▄▄▄▄▄
                              plan it ▐
                             ▀▀▀▀▀▀▀▀▀▀
                                  00:00
▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄
Plan

• read the file
• write it

rust                               copy
1 │ fn main() {
2 │     let x = 1;
▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀
▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄
▌ › █
▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀
